fix issue where scrollbar alway shows regardless of the height

--- a/src/app/sidebar/aichat.less
+++ b/src/app/sidebar/aichat.less
@@ -25,16 +25,15 @@
     }
 
     .content {
-        display: flex;
         flex-flow: column nowrap;
         flex: 1;
         padding: 0 15px;
         margin-bottom: 0;
+        overflow-y: auto;
 
         .chat-window {
             display: flex;
-            overflow-y: auto;
-            margin-bottom: 5px;
+            // margin-bottom: 5px;
             flex-direction: column;
             height: 100%;
 
